# Drone-simulation

./: Drone_Simulation_Progress_Report(IEEE format).docx  README.md
drone_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
drone_ws/install/drone_control/lib/drone_control/: avoidance_node  keyboard_control  lidar_processor  takeoff_node
drone_ws/install/drone_control/share/drone_control/: package.sh  package.xml
drone_ws/install/px4_msgs/share/px4_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
drone_ws/install/px4_msgs/share/px4_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  px4_msgsConfig-version.cmake  px4_msgsConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
drone_ws/install/px4_msgs/share/px4_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
drone_ws/install/px4_msgs/share/px4_msgs/msg/: ActionRequest.idl  (+367 more)
drone_ws/log/: latest_build  latest_list
drone_ws/src/drone_control/: package.xml  setup.py
drone_ws/src/drone_control/drone_control/: avoidance_node.py  keyboard_control.py  lidar_processor.py  takeoff_node.py
drone_ws/src/drone_control/drone_control/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
drone_ws/src/drone_control/drone_control/log/: latest_build
(+2783 files in other folders)
