<?xml version="1.0"?>
<package format="3">
  <name>drone_control</name>
  <version>0.0.1</version>
  <description>Drone flight control and avoidance nodes</description>
  <maintainer email="you@email.com">you</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>px4_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
